--- a/air pollution.html
+++ b/air pollution.html
@@ -11,7 +11,7 @@
             <h1 class="favourite">AIR POLLUTION</h1>
         </header>
         <nav>
-            <a class="nav-a" href="home.html">Home</a>
+            <a class="nav-a" href="index.html">Home</a>
             <a class="nav-a" href="water pollution.html">Water-pollution</a>
             <a class="nav-a" href="sound pollution.html">Sound-pollution</a>
             <a class="nav-a" href="air pollution.html">Air-pollution</a>
